# just-fucking-do-it

./: .gitignore  LICENSE  README.md  pyproject.toml
Formula/: jfdi.rb
jfdi/: __init__.py  art.py  cli.py  daemon.py  db.py  models.py  notifier.py  service.py  sound.py
tests/: conftest.py  test_cli.py  test_db.py  test_models.py  test_prediction.py  test_service.py
