[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfdi"
version = "0.1.0"
description = "JFDI - Just Fucking Do It. A CLI fitness tracker that pushes you to hit your daily exercise goals."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pawel Chraczynski", email = "contact@szawel.com"},
]
keywords = ["fitness", "cli", "exercise", "tracker", "pushups", "motivation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Solarden/just-fucking-do-it"
Repository = "https://github.com/Solarden/just-fucking-do-it"
Issues = "https://github.com/Solarden/just-fucking-do-it/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
publish = ["build", "twine"]

[project.scripts]
jfdi = "jfdi.cli:main"

[tool.setuptools.packages.find]
include = ["jfdi*"]

[tool.setuptools.package-data]
jfdi = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
